[content] Fix header alignment
Ref #374

--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -48,7 +48,7 @@ body.sidebar-closed .sidebar {
 .content-inner {
   max-width: 949px;
   margin: 0 auto;
-  padding: 27px 60px;
+  padding: 3px 60px;
 }
 
 @media screen and (max-width: 768px) {
